--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNm6He37tDfmIwQzudXG6NI",
+      "authorship_tag": "ABX9TyPjIFHhzbXk3kiIID77TS/6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,161 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "### 02. Neural Network classification with pytorch"
+      ],
       "metadata": {
         "id": "cjDTL4WuJXXS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## 1. Buat klasifikasi data"
+      ],
+      "metadata": {
+        "id": "qNEFmeefJ5YE"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn"
+      ],
+      "metadata": {
+        "id": "vkIi54XbJ78C"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import make_circles\n",
+        "\n",
+        "# Make 1000 samples\n",
+        "n_samples = 1000\n",
+        "\n",
+        "# Create circles\n",
+        "X, y = make_circles(n_samples,\n",
+        "                    noise = 0.03,\n",
+        "                    random_state=42)"
+      ],
+      "metadata": {
+        "id": "Z93au41cJ9n3"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(X), len(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c-EeOH5AKBhu",
+        "outputId": "d74a57db-8fa0-46f0-b96f-d35675fadaa8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 1000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('First samples of X')\n",
+        "X[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xj7ELQNlKPZV",
+        "outputId": "1d556fb7-2c8e-4d64-8fc9-53f86b6a2a4e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First samples of X\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.75424625,  0.23148074],\n",
+              "       [-0.75615888,  0.15325888],\n",
+              "       [-0.81539193,  0.17328203],\n",
+              "       [-0.39373073,  0.69288277],\n",
+              "       [ 0.44220765, -0.89672343]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('First samples of y')\n",
+        "y[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bbTjOLJ9KTNv",
+        "outputId": "e8d6272c-e2de-4be5-b968-e11b3e1f25ff"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First samples of y\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IZGvIix-KdQ8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
