--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPt1CLDnxPrEIi29ltvhhrn",
+      "authorship_tag": "ABX9TyPnqFOfTwBklcw+HCWshl/W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1655,14 +1655,98 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "## 5. Improvisasi model"
+        "## 5. Improvisasi model\n",
+        "\n",
+        "* Tambahkan layers - untuk memberikan model kesempatan mempelajari pola dari data\n",
+        "* Tambahkan unit tersembunyi - dari 5 hidden unit ke 10 hidden unit\n",
+        "* Perbanyak epochs\n",
+        "* Merubah fungsi aktiviasi\n",
+        "* Merubah learning rate (dari 0.01)\n",
+        "* Merubah fungsi loss\n",
+        "\n",
+        "Opsi ini adalah semuanya dari perspektif model karena permasalahn ini bermasalah pada model daripada datanya\n",
+        "\n",
+        "Dan karena opsi ini, kita menggunakan teknik *hyyperparameters*\n",
+        "\n",
+        "* nambahin hidden units dari 5 -> 10\n",
+        "* Nambahin layer dari 2 -> 3\n",
+        "* Nambahin epochs 100 -> 1000"
       ],
       "metadata": {
         "id": "pwIztbGetZBV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CircleModelV1(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.layer_1 = nn.Linear(in_features=2, out_features=10)\n",
+        "    self.layer_2 = nn.Linear(in_features=10, out_features=10)\n",
+        "    self.layer_3 = nn.Linear(in_features=10, out_features=1)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    # z = self.layer_1(x)\n",
+        "    # z = self.layer_2(z)\n",
+        "    # z = self.layer_2(z)\n",
+        "    # return z\n",
+        "\n",
+        "    return self.layer_3(self.layer_2(self.layer_1(x)))\n",
+        "\n",
+        "model_1 = CircleModelV1().to(device)\n",
+        "\n",
+        "model_1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0iL3vl0duetw",
+        "outputId": "7efa0ff3-0baf-4c64-9992-5b8c7b037f3f"
       },
-      "execution_count": 172,
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CircleModelV1(\n",
+              "  (layer_1): Linear(in_features=2, out_features=10, bias=True)\n",
+              "  (layer_2): Linear(in_features=10, out_features=10, bias=True)\n",
+              "  (layer_3): Linear(in_features=10, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Membuat fungsi loss\n",
+        "\n",
+        "# Membuat optimizer"
+      ],
+      "metadata": {
+        "id": "WvDIMHOZxzNx"
+      },
+      "execution_count": 175,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Menulis training dan evaluasi loop untuk model_1"
+      ],
+      "metadata": {
+        "id": "Vk9-x7tiyBXx"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
