--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -2752,10 +2752,167 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### 8.2 Bangun multi-class klasifikasi model dengan pyTorch"
+      ],
       "metadata": {
         "id": "UAoNTSGh1U7v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Buat device agnostic\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "jd8mJb2f4vXU",
+        "outputId": "a3c5e608-f3ba-47ef-c46d-1d59f8de528f"
+      },
+      "execution_count": 250,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cuda'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 250
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Bangun multi-class klasifikasi model\n",
+        "class BlobModel(nn.Module):\n",
+        "  def __init__(self, input_features, output_features, hidden_units=8):\n",
+        "    \"\"\"Inisialisasi multi-class klasifikasi model\n",
+        "    Args:\n",
+        "      input_features(int): jumlah dari fitur inputm kedalam model\n",
+        "      output_features (int): jumalh fitur ouput dr model\n",
+        "      hidden_unit, defaultnya 8\n",
+        "    \"\"\"\n",
+        "    super().__init__()\n",
+        "    self.linear_layer_stack = nn.Sequential(\n",
+        "        nn.Linear(in_features=input_features,\n",
+        "                  out_features=hidden_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(in_features=hidden_units,\n",
+        "                  out_features=hidden_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(in_features=hidden_units,\n",
+        "                  out_features=output_features)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return self.linear_layer_stack(x)\n",
+        "\n",
+        "# Buat instance dari BlobModel\n",
+        "\n",
+        "model_4 = BlobModel(input_features = 2,\n",
+        "                    output_features=4,\n",
+        "                    hidden_units=8).to(device)\n",
+        "model_4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0YwysX3o44AQ",
+        "outputId": "effb806a-d5d6-4c2a-b4d9-da4265007b91"
+      },
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BlobModel(\n",
+              "  (linear_layer_stack): Sequential(\n",
+              "    (0): Linear(in_features=2, out_features=8, bias=True)\n",
+              "    (1): ReLU()\n",
+              "    (2): Linear(in_features=8, out_features=8, bias=True)\n",
+              "    (3): ReLU()\n",
+              "    (4): Linear(in_features=8, out_features=4, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 253
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.unique(y_blob_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2CTBwfuN-MZa",
+        "outputId": "89ef2e1f-f661-4f85-dfc4-3d760c1a32d1"
+      },
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0., 1., 2., 3.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 251
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 8.3 Buat loss function dan optimizer untuk multiclass klasifikasi model"
+      ],
+      "metadata": {
+        "id": "zXj-5YJa-PDz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Buat fungsi loss untuk multi-class klasifikasi\n",
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# Buat optimizer untuk multi-class klasifikasi\n",
+        "optimizer = torch.optim.SGD(params=model_4.parameters(),\n",
+        "                            lr=0.1)"
+      ],
+      "metadata": {
+        "id": "DBoeTzbV_2md"
+      },
+      "execution_count": 254,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "### 8.4 Ambil prediciton probabilitas dari multi-class klasifikasi"
+      ],
+      "metadata": {
+        "id": "6ECCPDHuB6Wu"
       },
       "execution_count": null,
       "outputs": []
