Dibuat menggunakan Colab

--- a/03_pytorch_computer_vision.ipynb
+++ b/03_pytorch_computer_vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7y8MwQ4+nb4095CzqcryV",
+      "authorship_tag": "ABX9TyNeuCIkHhjtZw3gdDXTuuAP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -916,13 +916,176 @@
         "# Setup model dengan input parameter\n",
         "model_0 = FashionMNISTModelV0(\n",
         "    input_shape=784, # ini 28*28\n",
+        "    hidden_units=10, # seberapa banyak units di hidden layer\n",
+        "    output_shape=len(class_names) # satu dari tiap class\n",
+        ")\n",
+        "model_0.to(\"cpu\")\n",
         "\n",
-        ")"
+        "model_0"
       ],
       "metadata": {
-        "id": "u5ZjHQgTNAMr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u5ZjHQgTNAMr",
+        "outputId": "831c854e-1565-4c07-ac8a-48c8ab1ffb11"
       },
-      "execution_count": null,
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "FashionMNISTModelV0(\n",
+              "  (layer_stack): Sequential(\n",
+              "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+              "    (1): Linear(in_features=784, out_features=10, bias=True)\n",
+              "    (2): Linear(in_features=10, out_features=10, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_x = torch.rand([1,1,28,28])\n",
+        "model_0(dummy_x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HkeXKEIMNiwT",
+        "outputId": "4243dfda-230d-4aad-d327-4ded41e2dbc9"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.0315,  0.3171,  0.0531, -0.2525,  0.5959,  0.2112,  0.3233,  0.2694,\n",
+              "         -0.1004,  0.0157]], grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0.state_dict() # dinisialisasi dengan nilai acak, lalau bobot dan weightnyya disesuaikan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E1-8LTgGNq_F",
+        "outputId": "cc2d0e21-3e91-4d73-de3e-6157248204ca"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('layer_stack.1.weight',\n",
+              "              tensor([[ 0.0273,  0.0296, -0.0084,  ..., -0.0142,  0.0093,  0.0135],\n",
+              "                      [-0.0188, -0.0354,  0.0187,  ..., -0.0106, -0.0001,  0.0115],\n",
+              "                      [-0.0008,  0.0017,  0.0045,  ..., -0.0127, -0.0188,  0.0059],\n",
+              "                      ...,\n",
+              "                      [-0.0116,  0.0273, -0.0344,  ...,  0.0176,  0.0283, -0.0011],\n",
+              "                      [-0.0230,  0.0257,  0.0291,  ..., -0.0187, -0.0087,  0.0001],\n",
+              "                      [ 0.0176, -0.0147,  0.0053,  ..., -0.0336, -0.0221,  0.0205]])),\n",
+              "             ('layer_stack.1.bias',\n",
+              "              tensor([-0.0093,  0.0283, -0.0033,  0.0255,  0.0017,  0.0037, -0.0302, -0.0123,\n",
+              "                       0.0018,  0.0163])),\n",
+              "             ('layer_stack.2.weight',\n",
+              "              tensor([[ 0.0614, -0.0687,  0.0021,  0.2718,  0.2109,  0.1079, -0.2279, -0.1063,\n",
+              "                        0.2019,  0.2847],\n",
+              "                      [-0.1495,  0.1344, -0.0740,  0.2006, -0.0475, -0.2514, -0.3130, -0.0118,\n",
+              "                        0.0932, -0.1864],\n",
+              "                      [ 0.2488,  0.1500,  0.1907,  0.1457, -0.3050, -0.0580,  0.1643,  0.1565,\n",
+              "                       -0.2877, -0.1792],\n",
+              "                      [ 0.2305, -0.2618,  0.2397, -0.0610,  0.0232,  0.1542,  0.0851, -0.2027,\n",
+              "                        0.1030, -0.2715],\n",
+              "                      [-0.1596, -0.0555, -0.0633,  0.2302, -0.1726,  0.2654,  0.1473,  0.1029,\n",
+              "                        0.2252, -0.2160],\n",
+              "                      [-0.2725,  0.0118,  0.1559,  0.1596,  0.0132,  0.3024,  0.1124,  0.1366,\n",
+              "                       -0.1533,  0.0965],\n",
+              "                      [-0.1184, -0.2555, -0.2057, -0.1909, -0.0477, -0.1324,  0.2905,  0.1307,\n",
+              "                       -0.2629,  0.0133],\n",
+              "                      [ 0.2727, -0.0127,  0.0513,  0.0863, -0.1043, -0.2047, -0.1185, -0.0825,\n",
+              "                        0.2488, -0.2571],\n",
+              "                      [ 0.0425, -0.1209, -0.0336, -0.0281, -0.1227,  0.0730,  0.0747, -0.1816,\n",
+              "                        0.1943,  0.2853],\n",
+              "                      [-0.1310,  0.0645, -0.1171,  0.2168, -0.0245, -0.2820,  0.0736,  0.2621,\n",
+              "                        0.0012, -0.0810]])),\n",
+              "             ('layer_stack.2.bias',\n",
+              "              tensor([-0.0087,  0.1791,  0.2712, -0.0791,  0.1685,  0.1762,  0.2825,  0.2266,\n",
+              "                      -0.2612, -0.2613]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 Bangun setup loss, optimizer, dan matrik evaluasi\n",
+        "\n",
+        "* Loss function - sejak kita bekerja dengan kelas multikelas, loss function kita akan menggunakan `nn.CrossEntropyLoss()`\n",
+        "* Optimizer - akan menggunakan `torch.optim.SGD()` (stokastik gradient descent)\n",
+        "* Matrik evaluasi - sejak kita bekerja menggunakan masalah klasifikasi, mari menggunakan akurasi dengan menggunakan metrik evaluasi"
+      ],
+      "metadata": {
+        "id": "1MbzYfVrOREG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate accuracy (a classification metric)\n",
+        "def accuracy_fn(y_true, y_pred):\n",
+        "    \"\"\"Calculates accuracy between truth labels and predictions.\n",
+        "\n",
+        "    Args:\n",
+        "        y_true (torch.Tensor): Truth labels for predictions.\n",
+        "        y_pred (torch.Tensor): Predictions to be compared to predictions.\n",
+        "\n",
+        "    Returns:\n",
+        "        [torch.float]: Accuracy value between y_true and y_pred, e.g. 78.45\n",
+        "    \"\"\"\n",
+        "    correct = torch.eq(y_true, y_pred).sum().item()\n",
+        "    acc = (correct / len(y_pred)) * 100\n",
+        "    return acc"
+      ],
+      "metadata": {
+        "id": "My0GJG2EPJtw"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+        "                            lr=0.1)"
+      ],
+      "metadata": {
+        "id": "NZr_xe8YPwex"
+      },
+      "execution_count": 26,
       "outputs": []
     }
   ]
