Dibuat menggunakan Colab

--- a/03_pytorch_computer_vision_exercises.ipynb
+++ b/03_pytorch_computer_vision_exercises.ipynb
@@ -858,11 +858,11 @@
         "train_data, test_data"
       ],
       "metadata": {
-        "id": "fcIEID5TMzNn",
-        "outputId": "92cd82e4-c9cd-47a2-87c9-326e253af1cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fcIEID5TMzNn",
+        "outputId": "92cd82e4-c9cd-47a2-87c9-326e253af1cb"
       },
       "execution_count": 41,
       "outputs": [
@@ -900,12 +900,99 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "# Ukuran batch hyperparameter\n",
+        "BATCH_SIZE = 32\n",
+        "\n",
+        "# Masukkan dataset kedalam batch\n",
+        "train_dataloader = DataLoader(dataset=train_data,\n",
+        "                              batch_size=BATCH_SIZE,\n",
+        "                              shuffle=True)\n",
+        "test_dataloader = DataLoader(dataset=test_data,\n",
+        "                             batch_size=BATCH_SIZE,\n",
+        "                             shuffle=False)\n",
+        "\n",
+        "train_dataloader, test_dataloader"
+      ],
       "metadata": {
-        "id": "ALA6MPcFbJXQ"
+        "id": "ALA6MPcFbJXQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5575012-fa00-4b49-a108-a96417bf98de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<torch.utils.data.dataloader.DataLoader at 0x786b1d691910>,\n",
+              " <torch.utils.data.dataloader.DataLoader at 0x786b1d257a90>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lihat dataloader\n",
+        "print(f\"Dataloader: {train_dataloader, test_dataloader}\")\n",
+        "print(f\"Length of train_dataloader: {len(train_dataloader)} batches of {BATCH_SIZE}\")\n",
+        "print(f\"Length of test_dataloader: {len(test_dataloader)} batches of {BATCH_SIZE}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y6Yz773eNo0N",
+        "outputId": "226b03df-089f-4c72-dd99-d4a7ea2fb9cf"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataloader: (<torch.utils.data.dataloader.DataLoader object at 0x786b1d691910>, <torch.utils.data.dataloader.DataLoader object at 0x786b1d257a90>)\n",
+            "Length of train_dataloader: 1875 batches of 32\n",
+            "Length of test_dataloader: 313 batches of 32\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Melihat kedalam training dataloader\n",
+        "train_features_batch, train_labels_batch = next(iter(train_dataloader))\n",
+        "train_features_batch.shape, train_labels_batch.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NnuwMSoVOcGN",
+        "outputId": "bc007793-4533-41be-be9c-e181371742f4"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([32, 1, 28, 28]), torch.Size([32]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -918,7 +1005,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from torch import nn\n",
+        "class MNISTModel(nn.Module):\n",
+        "  def __init__(self,\n",
+        "               input_shape: int,\n",
+        "               hidden_units: int,\n",
+        "               output_shape: int):\n",
+        "    super().__init__()\n",
+        "    self.conv_block_1 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=input_shape,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=1),\n",
+        "        nn.ReLU()\n",
+        "    )"
+      ],
       "metadata": {
         "id": "5IKNF22XbKYS"
       },
