Dibuat menggunakan Colab

--- a/03_pytorch_computer_vision_exercises.ipynb
+++ b/03_pytorch_computer_vision_exercises.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SiPilip/pytorch_course/blob/main/03_pytorch_computer_vision_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -61,7 +50,7 @@
         "id": "GaeYzOTLwWh2",
         "outputId": "7260e7d0-e8e7-4a84-b09c-3f8d487749f8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +100,7 @@
         "id": "DNwZLMbCzJLk",
         "outputId": "96355d3f-897e-4a1b-fac1-51f961d9c485"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +225,7 @@
         },
         "outputId": "b91d5be4-e8a4-4ac7-9e5e-0ad617b00420"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +274,7 @@
         },
         "outputId": "d8abe42a-27fd-494e-b822-affc7ea7afb0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +387,7 @@
         "id": "T2jzxoHtGdDx",
         "outputId": "06bfbc5c-071f-4a50-bc02-0533c6bee0b5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +415,7 @@
         "id": "FrMIlOK9HQft",
         "outputId": "3d4018df-9f29-48f8-e563-5c0ba91589da"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +554,7 @@
         "id": "HWgJOpcbGlFB",
         "outputId": "199be6f2-6629-42a6-e4bf-90e8db68ec6e"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +590,7 @@
         "id": "s1nF66ZwG99b",
         "outputId": "ec001e9d-5d75-4980-ba60-8b5213236cdf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +625,7 @@
         "id": "kRRoTCoeHElT",
         "outputId": "a7125e1c-76ee-46f1-81f3-0cc07010e6a6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +653,7 @@
         "id": "O9K8H9bWHJvx",
         "outputId": "ffa1e216-2c49-4a77-8b30-ce90378ec7d1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +693,7 @@
         "id": "nDjFEju6H5HC",
         "outputId": "683d46fd-35ca-4b26-c6c4-99b549163c9e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +739,7 @@
         "id": "tiMirrGNIvFS",
         "outputId": "ab860c76-5baa-4986-de35-d2c7d6e4f09f"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +785,7 @@
         "id": "hZJl7PDwK_Ju",
         "outputId": "bb726a0a-a8c0-4fb5-8fa7-3559dcc0390a"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +827,7 @@
         "id": "rhB7iyODJYza",
         "outputId": "cad71b59-3f0c-4772-d71c-dfd34999e275"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -864,7 +853,7 @@
         "id": "fcIEID5TMzNn",
         "outputId": "92cd82e4-c9cd-47a2-87c9-326e253af1cb"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +912,7 @@
         },
         "outputId": "d5575012-fa00-4b49-a108-a96417bf98de"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +942,7 @@
         "id": "Y6Yz773eNo0N",
         "outputId": "226b03df-089f-4c72-dd99-d4a7ea2fb9cf"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +969,7 @@
         "id": "NnuwMSoVOcGN",
         "outputId": "bc007793-4533-41be-be9c-e181371742f4"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,14 +1014,119 @@
         "                  kernel_size=3,\n",
         "                  stride=1,\n",
         "                  padding=1),\n",
-        "        nn.ReLU()\n",
-        "    )"
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2)\n",
+        "    )\n",
+        "    self.conv_block_2 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2)\n",
+        "    )\n",
+        "    self.classifier = nn.Sequential(\n",
+        "        nn.Flatten(),\n",
+        "        nn.Linear(in_features=hidden_units*7*7,\n",
+        "                  out_features=output_shape)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = self.conv_block_1(x)\n",
+        "    print(x.shape)\n",
+        "    x = self.conv_block_2(x)\n",
+        "    print(x.shape)\n",
+        "    x = self.classifier(x)\n",
+        "    return x"
       ],
       "metadata": {
         "id": "5IKNF22XbKYS"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "model = MNISTModel(input_shape=1,\n",
+        "                   hidden_units=10,\n",
+        "                   output_shape=len(class_names)).to(device)"
+      ],
+      "metadata": {
+        "id": "doMvsdSbV54E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rand_image_tensor = torch.rand(size=(1,28,28))\n",
+        "rand_image_tensor.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ta2RfziuW1QF",
+        "outputId": "d4e1fda6-41f6-4d0f-b58e-0b0124509bc2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model(rand_image_tensor.unsqueeze(0).to(device))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LK1cwocBW6Mu",
+        "outputId": "b62be40f-2431-4d82-b271-09f794f05cf4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([1, 10, 14, 14])\n",
+            "torch.Size([1, 10, 7, 7])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0.0372, -0.0748,  0.0573, -0.0396, -0.0098,  0.0194, -0.0003, -0.0114,\n",
+              "          0.0206,  0.0003]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1045,9 +1139,96 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def accuracy_fn(y_true, y_pred):\n",
+        "    correct = torch.eq(y_true, y_pred).sum().item()\n",
+        "    acc = (correct / len(y_pred)) * 100\n",
+        "    return acc"
+      ],
+      "metadata": {
+        "id": "NO7D5rdMaaIQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Buat loss_fn dan optimizer\n",
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.SGD(params=model.parameters(),\n",
+        "                            lr=0.1)"
+      ],
       "metadata": {
         "id": "jSo6vVWFbNLD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tqdm.auto import tqdm\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "torch.cuda.manual_seed(42)\n",
+        "\n",
+        "# Atur epochs\n",
+        "epochs = 3\n",
+        "\n",
+        "# Waktunya berlatih!\n",
+        "for epoch in tqdm(range(epochs)):\n",
+        "\n",
+        "  # Atur nilai train loss dan train accuracy\n",
+        "  train_loss, train_acc = 0, 0\n",
+        "\n",
+        "  # Masuk mode train\n",
+        "  model.train()\n",
+        "\n",
+        "  #=========BATCHES LOOP TRAINING===========\n",
+        "  for batch, (X,y) in enumerate(train_dataloader):\n",
+        "    # 0. Setup Device\n",
+        "    X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "    # 1. Forward Pass\n",
+        "    y_pred = model(X)\n",
+        "\n",
+        "    # 2. Kalkulasi Loss dan Akurasi\n",
+        "    loss = loss_fn(y_pred, y)\n",
+        "    train_loss += loss\n",
+        "\n",
+        "    accuracy = accuracy_fn(y_true=y,\n",
+        "                           y_pred=y_pred.argmax(dim=1))\n",
+        "    train_acc += accuracy\n",
+        "\n",
+        "    # 3. Optimizer Zero Grad\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    # 4. Loss Backward\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # 5. Optimizer Step\n",
+        "    optimizer.step()\n",
+        "\n",
+        "  # Bagi total train loss dan akurasi dengan panjang dari train dataloader\n",
+        "  train_loss /= len(train_dataloader)\n",
+        "  train_acc /= len(train_dataloader)\n",
+        "  print(f\"Train loss: {train_loss:.5f} | Train acc: {train_acc:.2f}%\")\n",
+        "  print(\"\\n \\n\")\n",
+        "\n",
+        "  # ======TESTING======\n",
+        "\n",
+        "  # Atur nilai test loss, dan test accuracy\n",
+        "  test_loss, test_acc = 0, 0\n",
+        "\n",
+        "  # Letakkan model pada mode evaluasi\n",
+        "  model.eval()\n",
+        "\n",
+        "  # Masuk kedalam inference mode\n",
+        "  with torch.inference_mode:"
+      ],
+      "metadata": {
+        "id": "ysV3A-BWXzdf"
       },
       "execution_count": null,
       "outputs": []
